[fix] to fix overflow card.scss [edit] card.vue

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,8 +1,10 @@
 // importo bootstrap dopo averlo installato
 @import 'bootstrap/scss/bootstrap';
-
 //uso le variabili colore personalizzate
 @import './partials/variables.scss';
+
+@import './partials/card.scss';
+
 
 * {
   padding: 0;
@@ -11,5 +13,9 @@
 }
 
 .debug {
-  border: 1px solid white;
+  border: 1px solid black;
+}
+
+.debug-bg {
+  background-color: cadetblue;
 }
